# llm-zoomcamp

./: .env.example  .flake8  .gitignore  DEVELOPMENT.md  Makefile  README.md  docker-compose.yml  example_usage.py  load_documents.sh  pyproject.toml  rag.ipynb  requirements.txt  run_tests.py
.github/workflows/: ci.yml  code-quality.yml  tests.yml
jupiter_notebooks/: evaluate-text.ipynb  ground-truth-data.ipynb  hw3-evaluation.ipynb  rag.ipynb
rag/: __init__.py  config.py
rag/data/: __init__.py  loader.py  vector_store.py
rag/formatting/: __init__.py  context.py
rag/llm/: __init__.py  openai_client.py
rag/models/: __init__.py  course.py
rag/pipeline/: __init__.py  rag.py
rag/search/: __init__.py  elasticsearch_client.py  qdrant_client_custom.py  query_builder.py
rag/tests/: __init__.py  test_context_formatter.py  test_course.py  test_document_loader.py  test_elasticsearch_client.py  test_openai_client.py  test_qdrant_client.py  test_query_builder.py  test_rag_pipeline.py  test_runner.py  test_vector_store.py
