[project]
name = "llm-zoomcamp"
version = "0.1.0"
description = "LLM Zoomcamp course repo"
authors = [
    {name = "Yauheni-Khvainitski", email = "euheniy.khvoinitski@gmail.com"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "elasticsearch>=9.0.2",
    "tqdm>=4.67.1",
    "ipywidgets>=8.1.7",
    "openai>=1.84.0",
    "python-dotenv>=1.1.0"
]

[project.urls]
repository = "https://github.com/Yauheni-Khvainitski/llm-zoomcamp.git"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
notebook = "7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
